--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.triangle {
+  clip-path: polygon(50% 0, 100% 100%, 0 100%, 50% 0);
+}
